# pokemon

./: Cargo.toml
assets/map/: main_map.ldtk  pallet_town.ldtk
assets/sprites/tileset/: tileset_project.ldtk
examples/: bouncing_rapier.rs  snakegame.rs
src/: camera.rs  collisions.rs  ldtk_map.rs  main.rs  player.rs  snakegame.rs
src/pokemon_old/: camera.rs  ldtk_map.rs  main.rs  player.rs
