[package]
name = "pokemon"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_ecs_ldtk = "0.3.0"
bevy_rapier2d = {version = "0.15.0", features = ["debug-render"]}
bevy-inspector-egui = "0.11.0"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
rand = "0.7.3" 

[profile.dev]
opt-level = 1

# RAPIER OPTIMIZATION LEVEL (RECOMMENDED BY DOCS)
[profile.dev.package.bevy_rapier2d]
opt-level = 3